add cmake and some upd

--- a/app/src/mainwindow.ui
+++ b/app/src/mainwindow.ui
@@ -155,7 +155,7 @@
     <string>&amp;Save</string>
    </property>
    <property name="toolTip">
-    <string>сохранить</string>
+    <string>Save</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -223,7 +223,7 @@
   </action>
   <action name="action_Find">
    <property name="text">
-    <string>&amp;Find</string>
+    <string>&amp;Find/Replace</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+F</string>
